# lawful-rtd

./: extract_epub_lenient.py  extract_epub_semantic.py  hello.py  prompts.py  pyproject.toml  sample_prompted_chunks.py  summarize_book.py  summarize_book_batched.py  test_recursive_extract.py
output/: final_summary.xml
output/checkpoints/: iteration_1.xml  iteration_2.xml  iteration_3.xml  iteration_4.xml  iteration_5.xml
output/checkpoints_test/: iteration_1.xml  iteration_2.xml  iteration_4.xml
